k8s/infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oficina-apis
  namespace: oficina
  labels:
    app.kubernetes.io/name: oficina-ingress
    app.kubernetes.io/part-of: techchallenge-oficina
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /monolith(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: monolith-api
                port:
                  number: 80
          - path: /approval(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: approval-api
                port:
                  number: 80
          - path: /createos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: createos-api
                port:
                  number: 80
          - path: /getos(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: getos-api
                port:
                  number: 80
          - path: /status(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: status-api
                port:
                  number: 80
